manifests/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: LoadBalancer
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 3000
